# dwordle-backend

./: Cargo.toml  README.md  sqlx-data.json  wordle.csv
configuration/: base.yaml
migrations/: 20220405204856_create_words_table.sql  20220405205017_insert_test_word.sql  20220406201351_insert_words.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/queries/: word.rs
src/routes/: health_check.rs  mod.rs  validation.rs
tests/api/: health_check.rs  helpers.rs  main.rs  validation.rs
