[package]
name = "dwordle-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
anyhow = "1.0.40"


[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", # Use actix as runtime for future w/ TLS backend
    "macros", # query! and query_as! macros
    "postgres", # provides postgres specific functionality
    "uuid", # support for mapping SQL UUIDs with type Uuid from uuid crate
    "chrono", # allows SQL timestamptz to be used with DateTime<T> from `chrono` crate
    "migrate", # be able to manage migrations programmatically
    "offline"
]

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
